<resources>
    <string name="app_name">Reproductor Musica</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="add_song">Add Song</string>
    <string name="select_song">Selecciona una canción</string>
    <string name="search_song">Buscar canción</string>
    <string name="line">/</string>
    <string name="cero">00:00</string>
    <string name="select_music">Seleccionar archivo de música</string>
    <string name="safe_song">Guardar canción</string>
</resources>