<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/songNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:hint="@string/add_song"
        android:inputType="text"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/selectFileButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/SecondaryButtonStyle"
        android:text="@string/select_music" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/SecondaryButtonStyle"
        android:text="@string/safe_song" />
</LinearLayout>
